feat(mcq): rewrite Q30-Q31 in java-modules with multi-line educational format
Q30 (JPMS perspectives): correct=C, distractors falsely claim incompatibility
with Spring Boot, predict mass migration, or confuse JPMS with Project Loom.

Q31 (named/automatic/unnamed module): correct=B, distractors falsely state
named module cannot requires anything, propose putting JAR on classpath, or
misuse --add-exports flag.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>